--- a/templates/ченовик.html
+++ b/templates/ченовик.html
@@ -2,102 +2,15 @@
 <html land="en">
 <head>
     <meta charset="UTF-8">
-    <title>Weather cast</title>
     <link rel="stylesheet"
                     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
                     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
                     crossorigin="anonymous">
+    <title>Weather cast</title>
 </head>
 <body>
-    <div class="row">
-        <img src="static\img\image.jpg" class="img-responsive" alt="nothing">
-    </div>
-    <div class="position-absolute top-50 start-50 translate-middle">
-        <div class="row">
-                <div class="badge bg-light" style="width: 640px; height: 600px;" >
-                    <p>
-                      <div class="container text-center">
-                          <div class="text-primary-emphasis">
-                              <h1>
-                                  Регистрация
-                              </h1>
-                          </div>
-                      </div>
-                    <form method="post">
-                        <div class="mb-3">
-                            <input type="name" class="form-control" id="name" placeholder="Введите имя" name="name">
-                        </div>
-                        <div class="mb-3">
-                            <input type="surname" class="form-control" id="surname" placeholder="Введите фамилию" name="surname">
-                        </div>
-                        <div class="mb-3">
-                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Введите адрес почты" name="email">
-                        </div>
-                        <div class="mb-3">
-                            <input type="password" class="form-control" id="password" placeholder="Введите пароль" name="password">
-                        </div>
-                        <div class="mb-3">
-                            <div class="form-group">
-                                <div class="container text-center">
-                                    <div class="text-primary-emphasis">
-                                        <h4>Ваша страна</h4>
-                                    </div>
-                                </div>
-                                <select class="form-control" id="country" name="country">
-                                  <option>Россия</option>
-                                  <option>Украина</option>
-                                  <option>Беларусь</option>
-                                  <option>Казахстан</option>
-                                  <option>Грузия</option>
-                                    <option>Армения</option>
-                                    <option>Азербайджан</option>
-                                    <option>Узбекистан</option>
-                                    <option>Таджикистан</option>
-                                    <option>Туркменистан</option>
-                                    <option>Кыргыстан</option>
-                                    <option>Эстония</option>
-                                    <option>Латвия</option>
-                                    <option>Литва</option>
-                                    <option>США</option>
-                                    <option>Германия</option>
-                                    <option>Турция</option>
-                                    <option>Тайланд</option>
-                                    <option>Израиль</option>
-                                </select>
-                             </div>
-                        </div>
-                        <div class="mb-3">
-                            <input type="home" class="form-control" id="home" placeholder="Введите имя населённого пункта" name="home">
-                        </div>
-                        <div class="mb-3">
-                            <div class="form-group">
-                                <div class="text-primary-emphasis">
-                                    <h4>Укажите пол</h4>
-                                </div>
-                                <div class="form-check">
-                                  <input class="form-check-input" type="radio" name="sex" id="male" value="мужской" checked>
-                                  <label class="form-check-label" for="male">
-                                    Мужской
-                                  </label>
-                                </div>
-                                <div class="form-check">
-                                  <input class="form-check-input" type="radio" name="sex" id="female" value="женский">
-                                  <label class="form-check-label" for="female">
-                                    Женский
-                                  </label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <div class="text-center">
-                                <button type="submit" class="btn btn-primary">Записаться</button>
-                            </div>
-                        </div>
-                    </form>
-
-                    </p>
-                </div>
-        </div>
-    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" width="128" height="128" fill="#54B4D3" class="bi bi-snow" viewBox="0 0 16 16">
+        <path d="M8 16a.5.5 0 0 1-.5-.5v-1.293l-.646.647a.5.5 0 0 1-.707-.708L7.5 12.793V8.866l-3.4 1.963-.496 1.85a.5.5 0 1 1-.966-.26l.237-.882-1.12.646a.5.5 0 0 1-.5-.866l1.12-.646-.884-.237a.5.5 0 1 1 .26-.966l1.848.495L7 8 3.6 6.037l-1.85.495a.5.5 0 0 1-.258-.966l.883-.237-1.12-.646a.5.5 0 1 1 .5-.866l1.12.646-.237-.883a.5.5 0 1 1 .966-.258l.495 1.849L7.5 7.134V3.207L6.147 1.854a.5.5 0 1 1 .707-.708l.646.647V.5a.5.5 0 1 1 1 0v1.293l.647-.647a.5.5 0 1 1 .707.708L8.5 3.207v3.927l3.4-1.963.496-1.85a.5.5 0 1 1 .966.26l-.236.882 1.12-.646a.5.5 0 0 1 .5.866l-1.12.646.883.237a.5.5 0 1 1-.26.966l-1.848-.495L9 8l3.4 1.963 1.849-.495a.5.5 0 0 1 .259.966l-.883.237 1.12.646a.5.5 0 0 1-.5.866l-1.12-.646.236.883a.5.5 0 1 1-.966.258l-.495-1.849-3.4-1.963v3.927l1.353 1.353a.5.5 0 0 1-.707.708l-.647-.647V15.5a.5.5 0 0 1-.5.5z"/>
+    </svg>
 </body>
 </html>
