--- a/templates/index.html
+++ b/templates/index.html
@@ -25,24 +25,27 @@
 
 <div class="container-fluid text-center">
     <div class="row justify-content-md-center">
-        <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 1440px; height: 100px;" >
+        <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 1440px; height: 150px;" >
             <p>
               <div class="row">
                   <h1>
                       <span class="badge bg-secondary">
-                          Населёный пункт
+                          {{home}}
                       </span>
                       <span class="badge bg-primary">
-                          Температура: 10 C°
+                          Температура: {{tempreture}} C°
+                      </span>
+                       <span class="badge bg-primary">
+                          Давление: {{pressure}} мм
                       </span>
                       <span class="badge bg-info">
-                          Влажность: 50 %
+                          Влажность: {{humi}} %
                       </span>
                       <span class="badge bg-info">
-                          Осадки: нет
+                          Осадки: {{precipitation}}
                       </span>
                       <span class="badge bg-info">
-                          Ветер: 10  м/с
+                          Ветер: {{speed}}  м/с
                       </span>
                   </h1>
               </div>
